# study

debian/: debian12.md
leetcode/demo/: Makefile
leetcode/demo/sort/: Makefile  sort.c
leetcode/demo/utils/: Makefile  utils.c  utils.h
net/poll/: Makefile.am  README.md  configure.ac  mypoll.c  mypoll.h  tester.c  tester.h
net/poll/tests/: Makefile.am  hello.c  test1.c
net/xfrmi/: Makefile
net/xfrmi/.cache/clangd/index/: main.c.9D723A9DDFB47D9F.idx  nl_xfrmi.c.57B7CAF3F3883DC4.idx  nl_xfrmi.h.E391919725C7A176.idx  uthash.h.74C9E4E784253812.idx
net/xfrmi/lib/: Makefile  nl_xfrmi.c  nl_xfrmi.h
net/xfrmi/src/: Makefile  main.c
threads_pool/develop/threads_0/: README.md  threads_pool_00.c  threads_pool_00.h
threads_pool/develop/threads_1/: Makefile  README.md  threads_pool_01.c  threads_pool_01.h
threads_pool/develop/threads_1/README.assets/: threads_pool.vsd
threads_pool/lib/: Makefile  condvar.h  job.h  mutex.c  mutex.h  processor.c  processor.h  thread.c  thread.h  thread_value.c  thread_value.h
threads_pool/src/: Makefile  main.c
utils/: Makefile  Makefile.bak  backtrace.c  backtrace.h  backtrace.md  libtest.c  main.c
